src/objects/ISSP_KPI_Reporting__mdt.object
<CustomObject>
    <description>used for configuration for KPI Reporting</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>field used to filter records in the code just for specific actions</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Case Comment</fullName>
                </value>
                <value>
                    <fullName>Creating a Task</fullName>
                </value>
                <value>
                    <fullName>Send NOI</fullName>
                </value>
                <value>
                    <fullName>Case Closure</fullName>
                </value>
                <value>
                    <fullName>Case Escalation</fullName>
                </value>
                <value>
                    <fullName>Case Reopening</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>field used to keep Record Type Developer Name(s) for which include logic</description>
        <label>Case Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>field keep field api name to monitor change on it for KPI Reporting</description>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>field used to store amount of the points to apply to implemented logic</description>
        <label>Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reopening_Reason__c</fullName>
        <description>Field used to keep Reopening reason for which apply the logic</description>
        <label>Reopening Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_From__c</fullName>
        <description>field used to keep Case Status(es) for which apply the logic when status is changed FROM this one</description>
        <label>Status From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_To__c</fullName>
        <description>Field used to keep Case Status(es) for which apply the login when status is changed To this one</description>
        <label>Status To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Task__c</fullName>
        <description>Field used for KPI Reporting during when user logs a call</description>
        <label>Type of Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_From__c</fullName>
        <description>field keeps old value for field from Field_Api_Name__c for KPI Reporting</description>
        <label>Value From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_To__c</fullName>
        <description>Field keeps new value for field from Field_API_Name__c for KPI Reporting</description>
        <label>Value To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GCS KPI Reporting</label>
    <listViews>
        <fullName>GCS_Perf_matrix</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Type_of_Task__c</columns>
        <columns>Action__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Status_From__c</columns>
        <columns>Status_To__c</columns>
        <columns>Reopening_Reason__c</columns>
        <columns>Value_From__c</columns>
        <columns>Value_To__c</columns>
        <columns>Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>GCS Perf matrix</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>ISSP KPI Reporting</pluralLabel>
</CustomObject>